<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/weather_background"
    tools:context="com.dipweather.climafl.WeatherController">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default_location"
        android:id="@+id/locationTV"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:padding="2dp"
        android:layout_below="@+id/changeCityButton"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_alignBottom="@+id/tempTV"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default_temp"
        android:id="@+id/tempTV"
        android:layout_below="@+id/changeCityButton"
        android:layout_alignParentEnd="true"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/changeCityButton"
        android:src="@drawable/change_city_symbol_small"
        android:contentDescription="@string/change_city_description"
        android:background="@null"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="false"
        android:id="@+id/frameLayout"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/weatherSymbolIV"
            android:src="@drawable/dunno"
            android:contentDescription="@string/weather_description"

            />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pressure"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:padding="2dp"
        android:layout_below="@+id/frameLayout"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:id="@+id/textOfPressure"
        android:layout_marginTop="10dp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/textOfHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/humidity"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:padding="2dp"
        android:layout_below="@+id/frameLayout"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:layout_alignTop="@+id/textOfPressure"
        android:gravity="center"/>

    <TextView
        android:id="@+id/txtHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textOfHumidity"
        android:layout_below="@+id/textOfHumidity"
        android:gravity="center"
        android:padding="2dp"
        android:layout_marginTop="1dp"
        android:text="@string/default_temp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="30sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textOfPressure"
        android:layout_below="@+id/textOfHumidity"
        android:gravity="center"
        android:padding="2dp"
        android:layout_marginTop="1dp"
        android:text="@string/default_temp"
        android:id="@+id/txtPressure"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="30sp" />

</RelativeLayout>
