<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/city_background"


    >

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backButton"
        android:src="@drawable/left"
        android:background="@null"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:contentDescription="@string/back_button_description"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="2dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:hint="@string/default_query"
        android:background="@color/white"
        android:textSize="30sp"
        android:inputType="textAutoCorrect"
        android:id="@+id/queryET"
        android:textColor="@color/black"
        android:imeOptions="actionGo"
        android:gravity="center_vertical|center_horizontal"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_weather"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/getWeatherTV"
        android:layout_below="@+id/backButton"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>